add carrierwave create migrations and columns for photo price for room star ratin and include breakfast

--- a/hotel/hotel/app/views/gotels/show.html.erb
+++ b/hotel/hotel/app/views/gotels/show.html.erb
@@ -4,12 +4,22 @@
   <b>Title:</b>
   <%= @gotel.title %>
 </p>
-
+<div>
+  <b>Image:</b>
+  <%= image_tag @gotel.image_url.to_s %>
+</div>
 <p>
   <b>Room description:</b>
   <%= @gotel.room_description %>
 </p>
 
-
+<p>
+	<b>Breakfast included? </b>
+	<%= @gotel.breakfast %>
+</p>
+<p>
+	<b>Price for room </b>
+	<%= number_to_currency (@gotel.price_for_room) %>
+</p>
 <%= link_to 'Edit', edit_gotel_path(@gotel) %> |
 <%= link_to 'Back', gotels_path %>
