--- a/hotel/hotel/app/views/gotels/_form.html.erb
+++ b/hotel/hotel/app/views/gotels/_form.html.erb
@@ -12,6 +12,9 @@
     </div>
   <% end %>
   <%= f.input :title %>
+  <%= f.file_field :image %>
   <%= f.input :room_description %>
+  <%= f.input :price_for_room %>
+  <%= f.input :breakfast, :collection => ['Yes','No'], :as => :radio %>
   <%= f.button :submit %>
 <% end %>
