--- a/hotel/hotel/app/views/gotels/index.html.erb
+++ b/hotel/hotel/app/views/gotels/index.html.erb
@@ -12,6 +12,7 @@
 <% @gotels.each do |gotel| %>
   <tr>
     <td><%= gotel.title %></td>
+    <td><%= image_tag gotel.image_url(:thumb).to_s %></td>
     <td><%= gotel.room_description %></td>
     <td><%= link_to 'Show', gotel %></td>
     <td><%= link_to 'Edit', edit_gotel_path(gotel) %></td>
