--- a/hotel/hotel/app/views/gotels/_form.html.erb
+++ b/hotel/hotel/app/views/gotels/_form.html.erb
@@ -16,5 +16,11 @@
   <%= f.input :room_description %>
   <%= f.input :price_for_room %>
   <%= f.input :breakfast, :collection => ['Yes','No'], :as => :radio %>
+  <%= f.simple_fields_for :location_attributes  do |location_form| %>
+  <%= location_form.input :country, :as => :string %>
+  <%= location_form.input :state %>
+  <%= location_form.input :city %>
+  <%= location_form.input :street %>
+  <% end %>
   <%= f.button :submit %>
 <% end %>
